--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,10 +4,10 @@
   "jsxBracketSameLine": false,
   "jsxSingleQuote": false,
   "quoteProps": "consistent",
-  "printWidth": 180,
+  "printWidth": 80,
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "useTabs": false
 }
